--- a/mis-juntas.html
+++ b/mis-juntas.html
@@ -21,9 +21,8 @@
 		<section class="nubesMixtas">
 			<img src="image/mascara-nube-grande.png" class="nubeMascara">
 			<p class="textNubeM">Viaje a Cancún</p>
-			<img src="image/nube-fondo@2x.png" class="nubeNormal">
+			<a href="nueva-junt-1.html"><img src="image/nueva-junta@2x.png" class="nubeNormal"></a>
 			<p class="textNubeN">Iniciar junta</p>
-			<p class="cruzNube">+</p>
 		</section>
 		<script type="text/javascript" src="js/jquery.js" ></script>	
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
