--- a/nueva-junta-paso3.html
+++ b/nueva-junta-paso3.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<div class="nav Rectangle-3"><!-- nav-->
-			<a href="#">
+			<a href="home.html">
 				<i class="fa fa-arrow-left next-left icon-color" aria-hidden="true"></i>
 			</a>
 			<h3 class="text-nav">Nueva Junta</h3>
@@ -48,7 +48,7 @@
 		</section>
 		<div class="nube-footer newtop newtop3"><!--section nube-boton -->
 			<div>
-				<i class="fa fa-chevron-left icon-left-next" aria-hidden="true"></i>
+				<a href="nueva-junta-paso2.html"><i class="fa fa-chevron-left icon-left-next" aria-hidden="true"></i></a>
 				<a href="nueva-junta-confirmacion.html" type="button" class="btn btn-primary btn-lg btn-block btn-next">¡CREAR JUNTA!</a> 
 				<span class="text-span-junta3">Tus patas recibirán un SMS</span>
 			</div>
