--- a/nueva-junt-1.html
+++ b/nueva-junt-1.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<div class="nav Rectangle-3 fixed-top"><!-- nav-->
-			<a href="#">
+			<a href="home.html">
 				<i class="fa fa-arrow-left next-left icon-color" aria-hidden="true"></i>
 			</a>
 			<h3 class="text-nav nueva-nav">Nueva Junta</h3>
