--- a/nueva-junta-paso2.html
+++ b/nueva-junta-paso2.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<div class="nav Rectangle-3"><!-- nav-->
-			<a href="#"><i class="fa fa-arrow-left next-left icon-color" aria-hidden="true"></i></a>
+			<a href="home.html"><i class="fa fa-arrow-left next-left icon-color" aria-hidden="true"></i></a>
 			<h3 class="text-nav">Nueva Junta</h3>
 			<i class="fa fa-user user-right icon-color" aria-hidden="true"></i>
 		</div><!-- fin nav-->
@@ -51,7 +51,7 @@
 		</section>
 		<div class="nube-footer newtop"><!--section nube-boton -->
 			<div>
-				<i class="fa fa-chevron-left icon-left-next" aria-hidden="true"></i>
+				<a href="nueva-junt-1.html"><i class="fa fa-chevron-left icon-left-next" aria-hidden="true"></i></a>
 				<a id="next" type="button" class="btn btn-primary btn-lg btn-block btn-next">SIGUIENTE </a> 
 			</div>
 		</div><!--fin section nube -->
