--- a/viaje-a-cancun.html
+++ b/viaje-a-cancun.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<div class="nav navbarViaje">
-			<a href="#">
+			<a href="mis-juntas.html">
 				<i class="fa fa-arrow-left icon-color" aria-hidden="true"></i>
 			</a>
 			<h3 class="text-nav">Viaje a Cancún</h3>
