--- a/nueva-junta-paso3.html
+++ b/nueva-junta-paso3.html
@@ -12,7 +12,7 @@
 	  	<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
-		<div class="nav Rectangle-3"><!-- nav-->
+		<div class="nav navbar-fixed-top color-fixed Rectangle-3"><!-- nav-->
 			<a href="home.html">
 				<i class="fa fa-arrow-left next-left icon-color" aria-hidden="true"></i>
 			</a>
@@ -21,7 +21,7 @@
 				<i class="fa fa-user user-right icon-color" aria-hidden="true"></i>
 			</a>
 		</div><!-- fin nav-->
-		<section class="nueva-junta">
+		<section class="nueva-junta top-fixed">
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-offset-1 col-xs-10">
@@ -37,16 +37,18 @@
 						<div class="text-junta3">
 							<p>¿Quiénes <span>participarán </span> de la junta?</p>
 						</div>
-						<div class="num-personal-junta">
-							<span class="text-junta-left">Yo</span>
-							<input type="number" placeholder="123-456-789" class="text-junta-right"></input>
-						</div><!-- /input-group -->
-						<button type="button" class="btn btn-default btn-lg  btn-size agregar-friend"><i class="fa fa-plus-circle" aria-hidden="true"></i>Agregar a un pata...</button>
+						<div id="invitados">
+							<div class="num-personal-junta">
+								<span class="text-junta-left">Yo</span>
+								<input type="number" placeholder="123-456-789" class="text-junta-right"></input>
+							</div><!-- /input-group -->
+						</div>
+						<button id="agregar-pata" type="button" class="btn btn-default btn-lg  btn-size agregar-friend"><i class="fa fa-plus-circle" aria-hidden="true"></i>Agregar a un pata...</button>
 					</div>
 				</div>
 			</div>
 		</section>
-		<div class="nube-footer newtop newtop3"><!--section nube-boton -->
+		<div class="nube-footer nube-relative newtop newtop3"><!--section nube-boton -->
 			<div>
 				<a href="nueva-junta-paso2.html"><i class="fa fa-chevron-left icon-left-next" aria-hidden="true"></i></a>
 				<a href="nueva-junta-confirmacion.html" type="button" class="btn btn-primary btn-lg btn-block btn-next">¡CREAR JUNTA!</a> 
