--- a/nueva-junta-confirmacion.html
+++ b/nueva-junta-confirmacion.html
@@ -28,7 +28,7 @@
 						<div class="text-junta-confirmacion">
 							<p><span class="text-listo">¡Listo!</span></p>
 							<p class="text-light">sorteamos las fechas, y... </p>
-							<p class="text-final">¡El <span>30 de enero </span> te llevas los <span>S/1,500</span></p>
+							<p class="text-final">¡<span id="aqui-fecha"></span> te llevas los S/ <span id="total"></span></p>
 						</div>
 					</div>
 				</div>
@@ -42,5 +42,6 @@
 		</div><!--fin section nube -->
 		<script type="text/javascript" src="js/jquery.js" ></script>	
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="js/app.js"></script>
 	</body>
 </html>
