--- a/nueva-junta-paso3.html
+++ b/nueva-junta-paso3.html
@@ -51,7 +51,7 @@
 		<div class="nube-footer nube-relative newtop newtop3"><!--section nube-boton -->
 			<div>
 				<a href="nueva-junta-paso2.html"><i class="fa fa-chevron-left icon-left-next" aria-hidden="true"></i></a>
-				<a href="nueva-junta-confirmacion.html" type="button" class="btn btn-primary btn-lg btn-block btn-next">¡CREAR JUNTA!</a> 
+				<a id="btn-confirmacion" href="nueva-junta-confirmacion.html" type="button" class="btn btn-primary btn-lg btn-block btn-next">¡CREAR JUNTA!</a> 
 				<span class="text-span-junta3">Tus patas recibirán un SMS</span>
 			</div>
 		</div><!--fin section nube -->
