--- a/nueva-junt-1.html
+++ b/nueva-junt-1.html
@@ -42,7 +42,7 @@
 			</div>
 		</section>
 		<div>
-			<select class="cuando-btn center-block">
+			<select class="cuando-btn center-block nueva-junta">
 			  <option value="dic">el 31 de diciembre</option>
 			  <option value="ene">el 31 de enero</option>
 			  <option value="feb">el 31 de febrero</option>
@@ -52,11 +52,12 @@
 		<section id="footer" class="next-image"> <!--section nube-boton -->
 		<div class="nube-footer nueva1-btn">
 			<div>
-				<a href="nueva-junta-paso2.html" type="button" class="btn btn-primary btn-lg btn-block">SIGUIENTE</a> 
+				<a id="btn-fecha" href="nueva-junta-paso2.html" type="button" class="btn btn-primary btn-lg btn-block">SIGUIENTE</a> 
 			</div>
 		</div>
 		</section><!--fin section nube -->
 		<script type="text/javascript" src="js/jquery.js" ></script>	
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="js/app.js"></script>
     </body>
 </html>
