--- a/nueva-junta-paso2.html
+++ b/nueva-junta-paso2.html
@@ -37,9 +37,7 @@
 						    <div class="input-group-btn">
 						        <button type="button" class="btn btn-default dropdown-toggle margin-btn border-radius" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">S/ <span class="caret"></span></button>
 						        <ul class="dropdown-menu">
-						          <li><a href="#">S/</a></li>
-						          <li><a href="#">$</a></li>
-						          <li><a href="#">Euros</a></li>
+						          <li><a href="#">S/</a></li>		
 						        </ul>
 						    </div><!-- /btn-group -->
 						    <input id="aporte" type="number" class="form-control height-input border-radius" placeholder="250">
@@ -52,7 +50,7 @@
 		<div class="nube-footer newtop"><!--section nube-boton -->
 			<div>
 				<a href="nueva-junt-1.html"><i class="fa fa-chevron-left icon-left-next" aria-hidden="true"></i></a>
-				<a id="next" type="button" class="btn btn-primary btn-lg btn-block btn-next">SIGUIENTE </a> 
+				<a id="btn-aporte" type="button" class="btn btn-primary btn-lg btn-block btn-next">SIGUIENTE </a> 
 			</div>
 		</div><!--fin section nube -->
 		<script type="text/javascript" src="js/jquery.js" ></script>	
