--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
 		</header>
 		<div>
 			<form action="">
-				<input type="text" name="numero-celular" class="input-text" placeholder="escribe tu número aquí...">
+				<input type="tel" id="to" name="numero-celular" class="input-text" placeholder="escribe tu número aquí..." maxlength="9">
 				<div class="control">
 					<input type="checkbox" name="terminos-condiciones" class="w3-check font-roboto">
 					<label class="font-roboto">Acepto los <a href="#">términos y condiciones</a> </label>				
@@ -28,11 +28,12 @@
 			</form>
 		</div>
 			<div class="nube-footer iniciar-sesion">
-					<button type="button" class="btn-general font-roboto">
-						<a href="login-sms.html">INICIAR SESIÓN</a>
+					<button type="button" class="btn-general font-roboto" id="enviar-mensaje">
+						<a href="">INICIAR SESIÓN</a>
 				</button> 
 			</div> 
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="js/random.js"></script>
 	</body>
 </html>
